# aiops

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4dfc95ddc5e4_fix_topology_snapshot_timestamps.py  bb86b6f8fd55_initial_migration_create_all_tables.py
backend/apps/: api.py
backend/apps/cache/: base.py  manager.py  memory.py  redis.py
backend/apps/graph_db/: __init__.py  neo4j_helper.py  neo4j_mermaid_converter.py
backend/apps/llm/: llm_helper.py
backend/apps/llm/prompt/: prompt_template.py
backend/apps/models/service/: api_schema.py  database_model.py  graph_position_model.py  mcp_models.py  mcp_server_model.py  sdn_controller_model.py  sdn_models.py  topology_snapshot_model.py
backend/apps/models/workflow/: custom_state.py  models.py
backend/apps/rca/collector/: __init__.py  alert_collector.py  base_collector.py  (+3 more)
backend/apps/router/: common.py  graph_database_router.py  graph_position_router.py  mcp_router.py  sdn_router.py
backend/apps/service/: graph_database_service.py  graph_position_service.py  mcp_service.py  sdn_controller_service.py
backend/apps/utils/: config.py  db.py  deps.py  http_request.py  logger.py  utils.py
backend/etc/: config.yaml
backend/test/: run_test_main_node.py  run_test_plan_ref.py  run_test_worker.py  run_test_xw.py  run_test_xw_agent.py
backend/test/integration/: test_agent_node.py  test_main_node.py  test_reflec_plan_node.py  test_worker_node.py  test_xw_agent.py
backend/test/unit/: test_config.py
(+49 files in other folders)
